# MBA

./: DESCRIPTION  MD5  NAMESPACE  cleanup  configure  configure.in
R/: mba.points.R  mba.surf.R
data/: LIDAR.tab
man/: LIDAR.Rd  mba.points.Rd  mba.surf.Rd
src/: MBA.cpp  MBAPoints.cpp  MBASurf.cpp  MBAdata.cpp  Makevars.win  UCBsplineSurface.cpp  UCBsplines.cpp  init.cpp
src/include/: GenMatrix.h  MBA.h  MBAdata.h  MBAtypedef.h  RMBA.h  UCBsplineSurface.h  UCBsplines.h  UCBtypedef.h
